<resources>
    <string name="app_name">CometBites</string>
    <string name="cometbites">CometBites</string>
    <string name="get_started_button">Get Started</string>
    <string name="title_activity_browse_food_joints">BrowseFoodJointsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="cancel_order_link">Cancel Order</string>

    <!-- Strings related to login -->
    <string name="prompt_email">NetID@utdallas.edu</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_cardnum">Card Number</string>
    <string name="prompt_cvv">CVV</string>
    <string name="prompt_expMonth">Expiry Month</string>
    <string name="prompt_expYear">Expiry Year</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_code">Code</string>
    <string name="next">Next</string>
    <string name="placeOrder">Place Order</string>
    <string name="eticket">Get E-ticket</string>
    <string name="finish">Finish</string>
    <string name="action_sign_in">Comet Authentication</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_waittime">Est. Wait time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
