<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_payment_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.utdallas.cometbites.view.AddPaymentActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_browse_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_sign_up_page"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginTop="80dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/landing_page_image"
                    android:id="@+id/imageView2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>


            <LinearLayout
                android:layout_marginTop="210dp"
                android:id="@+id/signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Card Name"
                        android:inputType="textCapWords"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:id="@+id/cardname"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_cardnum"
                        android:inputType="number"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:id="@+id/cardno"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_cvv"
                        android:inputType="numberPassword"
                        android:maxLines="1"
                        android:id="@+id/cvv"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_expMonth"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="2"
                        android:id="@+id/expMonth"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_expYear"
                        android:inputType="number"
                        android:maxLines="1"
                        android:id="@+id/expYear"
                        android:maxLength="4"
                        />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/finish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/finish"
                    android:textStyle="bold" />

            </LinearLayout>


    </RelativeLayout>
</ScrollView>
</RelativeLayout>
